fixed pdf alignment

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ label {
 
 .item-table {
   margin-top: 20px;
-  padding:15px
+  padding: 15px;
 }
 
 .item-row {
@@ -152,7 +152,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;;
+  align-items: center;
   gap: 10px;
 }
 
@@ -161,8 +161,7 @@ button:hover {
   color: #fff;
 }
 
-.btn-div
-{
+.btn-div {
   text-align: center;
 }
 
@@ -174,8 +173,6 @@ button:hover {
   margin: 10px;
 }
 
-
-
 .invoice-preview {
   max-width: 800px;
   margin: 0 auto;
@@ -184,29 +181,29 @@ button:hover {
   font-family: Arial, sans-serif;
   background-color: #fff;
   color: #000;
-  padding-bottom: 100px;
-  min-height: 1100px; 
+  padding-bottom: 300px;
+  min-height: 1100px;
 }
 
-.header, .client-info, .invoice-details, .totals {
+.header,
+.client-info,
+.invoice-details,
+.totals {
   margin-bottom: 20px;
 }
 
 h2 {
   font-size: 24px;
   margin-bottom: 5px;
-  color: #000;
 }
 
 h3 {
   font-size: 18px;
   margin-bottom: 10px;
-  color: #000;
 }
 
 p {
   margin: 0;
-  color: #000;
 }
 
 .item-table {
@@ -215,17 +212,18 @@ p {
   margin-bottom: 20px;
 }
 
-.item-table th, .item-table td {
+.item-table th,
+.item-table td {
   border: 1px solid #000;
   padding: 8px;
-  text-align: right;
+  text-align: center;
 }
 
 .item-table th {
   background-color: #fff;
   color: #000;
 }
-.totals{
+.totals {
   text-align: right;
 }
 .totals p {
